
[TestVM/1 - 1]
&ast.Program{
    Statements: {
        &ast.IntStatement{Value:1},
        &ast.EmptyStatement{},
    },
}
---

[TestVM/2 - 1]
&ast.Program{
    Statements: {
        &ast.IntStatement{Value:2},
        &ast.EmptyStatement{},
    },
}
---

[TestVM/1+2 - 1]
&ast.Program{
    Statements: {
        &ast.IntStatement{Value:1},
        &ast.IntStatement{Value:2},
        &ast.EmptyStatement{},
    },
}
---

[TestVM/(+_1_2) - 1]
&ast.Program{
    Statements: {
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"PLUS", TokenValue:"+"},
            Args: {
                &ast.IntStatement{Value:1},
                &ast.IntStatement{Value:2},
            },
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/(-_2_1) - 1]
&ast.Program{
    Statements: {
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"MINUS", TokenValue:"-"},
            Args: {
                &ast.IntStatement{Value:2},
                &ast.IntStatement{Value:1},
            },
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/(*_2_2) - 1]
&ast.Program{
    Statements: {
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"MULTIPLY", TokenValue:"*"},
            Args: {
                &ast.IntStatement{Value:2},
                &ast.IntStatement{Value:2},
            },
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/(/_4_2) - 1]
&ast.Program{
    Statements: {
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"SLASH", TokenValue:"/"},
            Args: {
                &ast.IntStatement{Value:4},
                &ast.IntStatement{Value:2},
            },
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/(-_(+_10_(*_2_(/_50_2)))_5) - 1]
&ast.Program{
    Statements: {
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"MINUS", TokenValue:"-"},
            Args: {
                &ast.CallStatement{
                    Op:   &token.Token{TokenType:"PLUS", TokenValue:"+"},
                    Args: {
                        &ast.IntStatement{Value:10},
                        &ast.CallStatement{
                            Op:   &token.Token{TokenType:"MULTIPLY", TokenValue:"*"},
                            Args: {
                                &ast.IntStatement{Value:2},
                                &ast.CallStatement{
                                    Op:   &token.Token{TokenType:"SLASH", TokenValue:"/"},
                                    Args: {
                                        &!%v(DEPTH EXCEEDED),
                                        &!%v(DEPTH EXCEEDED),
                                    },
                                },
                            },
                        },
                    },
                },
                &ast.IntStatement{Value:5},
            },
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/(-_(+_5_5_5_5)_10) - 1]
&ast.Program{
    Statements: {
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"MINUS", TokenValue:"-"},
            Args: {
                &ast.CallStatement{
                    Op:   &token.Token{TokenType:"PLUS", TokenValue:"+"},
                    Args: {
                        &ast.IntStatement{Value:5},
                        &ast.IntStatement{Value:5},
                        &ast.IntStatement{Value:5},
                        &ast.IntStatement{Value:5},
                    },
                },
                &ast.IntStatement{Value:10},
            },
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/(*_2_2_2_2) - 1]
&ast.Program{
    Statements: {
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"MULTIPLY", TokenValue:"*"},
            Args: {
                &ast.IntStatement{Value:2},
                &ast.IntStatement{Value:2},
                &ast.IntStatement{Value:2},
                &ast.IntStatement{Value:2},
            },
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/(*_2_2_2_2_2) - 1]
&ast.Program{
    Statements: {
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"MULTIPLY", TokenValue:"*"},
            Args: {
                &ast.IntStatement{Value:2},
                &ast.IntStatement{Value:2},
                &ast.IntStatement{Value:2},
                &ast.IntStatement{Value:2},
                &ast.IntStatement{Value:2},
            },
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/(+_10_(*_5_2)) - 1]
&ast.Program{
    Statements: {
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"PLUS", TokenValue:"+"},
            Args: {
                &ast.IntStatement{Value:10},
                &ast.CallStatement{
                    Op:   &token.Token{TokenType:"MULTIPLY", TokenValue:"*"},
                    Args: {
                        &ast.IntStatement{Value:5},
                        &ast.IntStatement{Value:2},
                    },
                },
            },
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/(+_5_(*_2_10)) - 1]
&ast.Program{
    Statements: {
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"PLUS", TokenValue:"+"},
            Args: {
                &ast.IntStatement{Value:5},
                &ast.CallStatement{
                    Op:   &token.Token{TokenType:"MULTIPLY", TokenValue:"*"},
                    Args: {
                        &ast.IntStatement{Value:2},
                        &ast.IntStatement{Value:10},
                    },
                },
            },
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/(*_5_(+_2_10)) - 1]
&ast.Program{
    Statements: {
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"MULTIPLY", TokenValue:"*"},
            Args: {
                &ast.IntStatement{Value:5},
                &ast.CallStatement{
                    Op:   &token.Token{TokenType:"PLUS", TokenValue:"+"},
                    Args: {
                        &ast.IntStatement{Value:2},
                        &ast.IntStatement{Value:10},
                    },
                },
            },
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/true - 1]
&ast.Program{
    Statements: {
        &ast.BoolStatement{Value:true},
        &ast.EmptyStatement{},
    },
}
---

[TestVM/false - 1]
&ast.Program{
    Statements: {
        &ast.BoolStatement{},
        &ast.EmptyStatement{},
    },
}
---

[TestVM/(<_1_2) - 1]
&ast.Program{
    Statements: {
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"LESSTHAN", TokenValue:"<"},
            Args: {
                &ast.IntStatement{Value:1},
                &ast.IntStatement{Value:2},
            },
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/(>_1_2) - 1]
&ast.Program{
    Statements: {
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"GREATERTHAN", TokenValue:">"},
            Args: {
                &ast.IntStatement{Value:1},
                &ast.IntStatement{Value:2},
            },
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/(>_1_1) - 1]
&ast.Program{
    Statements: {
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"GREATERTHAN", TokenValue:">"},
            Args: {
                &ast.IntStatement{Value:1},
                &ast.IntStatement{Value:1},
            },
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/(<_1_1) - 1]
&ast.Program{
    Statements: {
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"LESSTHAN", TokenValue:"<"},
            Args: {
                &ast.IntStatement{Value:1},
                &ast.IntStatement{Value:1},
            },
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/(=_1_1) - 1]
&ast.Program{
    Statements: {
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"EQ", TokenValue:"="},
            Args: {
                &ast.IntStatement{Value:1},
                &ast.IntStatement{Value:1},
            },
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/(=_1_2) - 1]
&ast.Program{
    Statements: {
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"EQ", TokenValue:"="},
            Args: {
                &ast.IntStatement{Value:1},
                &ast.IntStatement{Value:2},
            },
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/(=_1_2)#01 - 1]
&ast.Program{
    Statements: {
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"EQ", TokenValue:"="},
            Args: {
                &ast.IntStatement{Value:1},
                &ast.IntStatement{Value:2},
            },
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/(=_true_true) - 1]
&ast.Program{
    Statements: {
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"EQ", TokenValue:"="},
            Args: {
                &ast.BoolStatement{Value:true},
                &ast.BoolStatement{Value:true},
            },
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/(=_false_true) - 1]
&ast.Program{
    Statements: {
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"EQ", TokenValue:"="},
            Args: {
                &ast.BoolStatement{},
                &ast.BoolStatement{Value:true},
            },
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/(=_(<_1_2)_true) - 1]
&ast.Program{
    Statements: {
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"EQ", TokenValue:"="},
            Args: {
                &ast.CallStatement{
                    Op:   &token.Token{TokenType:"LESSTHAN", TokenValue:"<"},
                    Args: {
                        &ast.IntStatement{Value:1},
                        &ast.IntStatement{Value:2},
                    },
                },
                &ast.BoolStatement{Value:true},
            },
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/(=_(<_1_2)_false) - 1]
&ast.Program{
    Statements: {
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"EQ", TokenValue:"="},
            Args: {
                &ast.CallStatement{
                    Op:   &token.Token{TokenType:"LESSTHAN", TokenValue:"<"},
                    Args: {
                        &ast.IntStatement{Value:1},
                        &ast.IntStatement{Value:2},
                    },
                },
                &ast.BoolStatement{},
            },
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/(=_(>_1_2)_true) - 1]
&ast.Program{
    Statements: {
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"EQ", TokenValue:"="},
            Args: {
                &ast.CallStatement{
                    Op:   &token.Token{TokenType:"GREATERTHAN", TokenValue:">"},
                    Args: {
                        &ast.IntStatement{Value:1},
                        &ast.IntStatement{Value:2},
                    },
                },
                &ast.BoolStatement{Value:true},
            },
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/(=_(>_1_2)_false) - 1]
&ast.Program{
    Statements: {
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"EQ", TokenValue:"="},
            Args: {
                &ast.CallStatement{
                    Op:   &token.Token{TokenType:"GREATERTHAN", TokenValue:">"},
                    Args: {
                        &ast.IntStatement{Value:1},
                        &ast.IntStatement{Value:2},
                    },
                },
                &ast.BoolStatement{},
            },
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/(if_true_10) - 1]
&ast.Program{
    Statements: {
        &ast.IfStatement{
            Condition: &ast.BoolStatement{Value:true},
            Body:      &ast.IntStatement{Value:10},
            Else:      nil,
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/(if_true_10_20) - 1]
&ast.Program{
    Statements: {
        &ast.IfStatement{
            Condition: &ast.BoolStatement{Value:true},
            Body:      &ast.IntStatement{Value:10},
            Else:      &ast.IntStatement{Value:20},
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/(if_false_10_20) - 1]
&ast.Program{
    Statements: {
        &ast.IfStatement{
            Condition: &ast.BoolStatement{},
            Body:      &ast.IntStatement{Value:10},
            Else:      &ast.IntStatement{Value:20},
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/(if_(<_1_2)_10) - 1]
&ast.Program{
    Statements: {
        &ast.IfStatement{
            Condition: &ast.CallStatement{
                Op:   &token.Token{TokenType:"LESSTHAN", TokenValue:"<"},
                Args: {
                    &ast.IntStatement{Value:1},
                    &ast.IntStatement{Value:2},
                },
            },
            Body: &ast.IntStatement{Value:10},
            Else: nil,
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/(if_(<_1_2)_10_20) - 1]
&ast.Program{
    Statements: {
        &ast.IfStatement{
            Condition: &ast.CallStatement{
                Op:   &token.Token{TokenType:"LESSTHAN", TokenValue:"<"},
                Args: {
                    &ast.IntStatement{Value:1},
                    &ast.IntStatement{Value:2},
                },
            },
            Body: &ast.IntStatement{Value:10},
            Else: &ast.IntStatement{Value:20},
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/(if_(>_1_2)_10_20) - 1]
&ast.Program{
    Statements: {
        &ast.IfStatement{
            Condition: &ast.CallStatement{
                Op:   &token.Token{TokenType:"GREATERTHAN", TokenValue:">"},
                Args: {
                    &ast.IntStatement{Value:1},
                    &ast.IntStatement{Value:2},
                },
            },
            Body: &ast.IntStatement{Value:10},
            Else: &ast.IntStatement{Value:20},
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/(let_one_1)_one - 1]
&ast.Program{
    Statements: {
        &ast.AssignmentStatement{
            Name:  &token.Token{TokenType:"IDENT", TokenValue:"one"},
            Value: &ast.IntStatement{Value:1},
        },
        &ast.IdentStatement{
            Value: &token.Token{TokenType:"IDENT", TokenValue:"one"},
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/(let_one_1)_(let_two_2)_(+_one_two) - 1]
&ast.Program{
    Statements: {
        &ast.AssignmentStatement{
            Name:  &token.Token{TokenType:"IDENT", TokenValue:"one"},
            Value: &ast.IntStatement{Value:1},
        },
        &ast.AssignmentStatement{
            Name:  &token.Token{TokenType:"IDENT", TokenValue:"two"},
            Value: &ast.IntStatement{Value:2},
        },
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"PLUS", TokenValue:"+"},
            Args: {
                &ast.IdentStatement{
                    Value: &token.Token{TokenType:"IDENT", TokenValue:"one"},
                },
                &ast.IdentStatement{
                    Value: &token.Token{TokenType:"IDENT", TokenValue:"two"},
                },
            },
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/(let_one_1)_(let_two_(+_one_one))_(+_one_two) - 1]
&ast.Program{
    Statements: {
        &ast.AssignmentStatement{
            Name:  &token.Token{TokenType:"IDENT", TokenValue:"one"},
            Value: &ast.IntStatement{Value:1},
        },
        &ast.AssignmentStatement{
            Name:  &token.Token{TokenType:"IDENT", TokenValue:"two"},
            Value: &ast.CallStatement{
                Op:   &token.Token{TokenType:"PLUS", TokenValue:"+"},
                Args: {
                    &ast.IdentStatement{
                        Value: &token.Token{TokenType:"IDENT", TokenValue:"one"},
                    },
                    &ast.IdentStatement{
                        Value: &token.Token{TokenType:"IDENT", TokenValue:"one"},
                    },
                },
            },
        },
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"PLUS", TokenValue:"+"},
            Args: {
                &ast.IdentStatement{
                    Value: &token.Token{TokenType:"IDENT", TokenValue:"one"},
                },
                &ast.IdentStatement{
                    Value: &token.Token{TokenType:"IDENT", TokenValue:"two"},
                },
            },
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/(let_fivePlusTen_(lambda_()_(+_5_10)))_(fivePlusTen) - 1]
&ast.Program{
    Statements: {
        &ast.AssignmentStatement{
            Name:  &token.Token{TokenType:"IDENT", TokenValue:"fivePlusTen"},
            Value: &ast.LambdaStatement{
                Args: {
                },
                Body: {
                    &ast.CallStatement{
                        Op:   &token.Token{TokenType:"PLUS", TokenValue:"+"},
                        Args: {
                            &ast.IntStatement{Value:5},
                            &ast.IntStatement{Value:10},
                        },
                    },
                },
            },
        },
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"IDENT", TokenValue:"fivePlusTen"},
            Args: nil,
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/(let_one_(lambda_()_1))_(let_two_(lambda_()_2))_(+_(one)_(two)) - 1]
&ast.Program{
    Statements: {
        &ast.AssignmentStatement{
            Name:  &token.Token{TokenType:"IDENT", TokenValue:"one"},
            Value: &ast.LambdaStatement{
                Args: {
                },
                Body: {
                    &ast.IntStatement{Value:1},
                },
            },
        },
        &ast.AssignmentStatement{
            Name:  &token.Token{TokenType:"IDENT", TokenValue:"two"},
            Value: &ast.LambdaStatement{
                Args: {
                },
                Body: {
                    &ast.IntStatement{Value:2},
                },
            },
        },
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"PLUS", TokenValue:"+"},
            Args: {
                &ast.CallStatement{
                    Op:   &token.Token{TokenType:"IDENT", TokenValue:"one"},
                    Args: nil,
                },
                &ast.CallStatement{
                    Op:   &token.Token{TokenType:"IDENT", TokenValue:"two"},
                    Args: nil,
                },
            },
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/_____________(let_returnsOne_(lambda()_1))_____________(let_returnsOneReturner_(lambda_()_(returnsOne)))_____________(returnsOneReturner)_____________ - 1]
&ast.Program{
    Statements: {
        &ast.AssignmentStatement{
            Name:  &token.Token{TokenType:"IDENT", TokenValue:"returnsOne"},
            Value: &ast.LambdaStatement{
                Args: {
                },
                Body: {
                    &ast.IntStatement{Value:1},
                },
            },
        },
        &ast.AssignmentStatement{
            Name:  &token.Token{TokenType:"IDENT", TokenValue:"returnsOneReturner"},
            Value: &ast.LambdaStatement{
                Args: {
                },
                Body: {
                    &ast.CallStatement{
                        Op:   &token.Token{TokenType:"IDENT", TokenValue:"returnsOne"},
                        Args: nil,
                    },
                },
            },
        },
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"IDENT", TokenValue:"returnsOneReturner"},
            Args: nil,
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/_____________(let_one_(lambda()_(let_one_1)_one))_____________(one)_____________ - 1]
&ast.Program{
    Statements: {
        &ast.AssignmentStatement{
            Name:  &token.Token{TokenType:"IDENT", TokenValue:"one"},
            Value: &ast.LambdaStatement{
                Args: {
                },
                Body: {
                    &ast.AssignmentStatement{
                        Name:  &token.Token{TokenType:"IDENT", TokenValue:"one"},
                        Value: &ast.IntStatement{Value:1},
                    },
                    &ast.IdentStatement{
                        Value: &token.Token{TokenType:"IDENT", TokenValue:"one"},
                    },
                },
            },
        },
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"IDENT", TokenValue:"one"},
            Args: nil,
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/(let_returnsOne_(lambda()_1))_____________(let_returnsOneReturner_(lambda_()_(returnsOne)))_____________(returnsOneReturner)_____________ - 1]
&ast.Program{
    Statements: {
        &ast.AssignmentStatement{
            Name:  &token.Token{TokenType:"IDENT", TokenValue:"returnsOne"},
            Value: &ast.LambdaStatement{
                Args: {
                },
                Body: {
                    &ast.IntStatement{Value:1},
                },
            },
        },
        &ast.AssignmentStatement{
            Name:  &token.Token{TokenType:"IDENT", TokenValue:"returnsOneReturner"},
            Value: &ast.LambdaStatement{
                Args: {
                },
                Body: {
                    &ast.CallStatement{
                        Op:   &token.Token{TokenType:"IDENT", TokenValue:"returnsOne"},
                        Args: nil,
                    },
                },
            },
        },
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"IDENT", TokenValue:"returnsOneReturner"},
            Args: nil,
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/(let_one_(lambda()_(let_one_1)_one))_____________(one)_____________ - 1]
&ast.Program{
    Statements: {
        &ast.AssignmentStatement{
            Name:  &token.Token{TokenType:"IDENT", TokenValue:"one"},
            Value: &ast.LambdaStatement{
                Args: {
                },
                Body: {
                    &ast.AssignmentStatement{
                        Name:  &token.Token{TokenType:"IDENT", TokenValue:"one"},
                        Value: &ast.IntStatement{Value:1},
                    },
                    &ast.IdentStatement{
                        Value: &token.Token{TokenType:"IDENT", TokenValue:"one"},
                    },
                },
            },
        },
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"IDENT", TokenValue:"one"},
            Args: nil,
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/(let_one_(lambda()_(let_one_1)_one))_(one) - 1]
&ast.Program{
    Statements: {
        &ast.AssignmentStatement{
            Name:  &token.Token{TokenType:"IDENT", TokenValue:"one"},
            Value: &ast.LambdaStatement{
                Args: {
                },
                Body: {
                    &ast.AssignmentStatement{
                        Name:  &token.Token{TokenType:"IDENT", TokenValue:"one"},
                        Value: &ast.IntStatement{Value:1},
                    },
                    &ast.IdentStatement{
                        Value: &token.Token{TokenType:"IDENT", TokenValue:"one"},
                    },
                },
            },
        },
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"IDENT", TokenValue:"one"},
            Args: nil,
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/___________(let_returnsOne_(lambda()_1))___________(let_returnsOneReturner_(lambda_()_(returnsOne)))___________(returnsOneReturner)___________ - 1]
&ast.Program{
    Statements: {
        &ast.AssignmentStatement{
            Name:  &token.Token{TokenType:"IDENT", TokenValue:"returnsOne"},
            Value: &ast.LambdaStatement{
                Args: {
                },
                Body: {
                    &ast.IntStatement{Value:1},
                },
            },
        },
        &ast.AssignmentStatement{
            Name:  &token.Token{TokenType:"IDENT", TokenValue:"returnsOneReturner"},
            Value: &ast.LambdaStatement{
                Args: {
                },
                Body: {
                    &ast.CallStatement{
                        Op:   &token.Token{TokenType:"IDENT", TokenValue:"returnsOne"},
                        Args: nil,
                    },
                },
            },
        },
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"IDENT", TokenValue:"returnsOneReturner"},
            Args: nil,
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/(let_oneAndTwo_(lambda_()_(let_one_1)_(let_two_2)_(+_one_two)))_(oneAndTwo) - 1]
&ast.Program{
    Statements: {
        &ast.AssignmentStatement{
            Name:  &token.Token{TokenType:"IDENT", TokenValue:"oneAndTwo"},
            Value: &ast.LambdaStatement{
                Args: {
                },
                Body: {
                    &ast.AssignmentStatement{
                        Name:  &token.Token{TokenType:"IDENT", TokenValue:"one"},
                        Value: &ast.IntStatement{Value:1},
                    },
                    &ast.AssignmentStatement{
                        Name:  &token.Token{TokenType:"IDENT", TokenValue:"two"},
                        Value: &ast.IntStatement{Value:2},
                    },
                    &ast.CallStatement{
                        Op:   &token.Token{TokenType:"PLUS", TokenValue:"+"},
                        Args: {
                            &ast.IdentStatement{
                                Value: &token.Token{TokenType:"IDENT", TokenValue:"one"},
                            },
                            &ast.IdentStatement{
                                Value: &token.Token{TokenType:"IDENT", TokenValue:"two"},
                            },
                        },
                    },
                },
            },
        },
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"IDENT", TokenValue:"oneAndTwo"},
            Args: nil,
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/___________(let_oneAndTwo_(lambda_()_(let_one_1)_(let_two_2)_(+_one_two)))____________(let_threeAndFour_(lambda_()_(let_three_3)_(let_four_4)_(+_three_four)))___________(+_(oneAndTwo)_(threeAndFour)) - 1]
&ast.Program{
    Statements: {
        &ast.AssignmentStatement{
            Name:  &token.Token{TokenType:"IDENT", TokenValue:"oneAndTwo"},
            Value: &ast.LambdaStatement{
                Args: {
                },
                Body: {
                    &ast.AssignmentStatement{
                        Name:  &token.Token{TokenType:"IDENT", TokenValue:"one"},
                        Value: &ast.IntStatement{Value:1},
                    },
                    &ast.AssignmentStatement{
                        Name:  &token.Token{TokenType:"IDENT", TokenValue:"two"},
                        Value: &ast.IntStatement{Value:2},
                    },
                    &ast.CallStatement{
                        Op:   &token.Token{TokenType:"PLUS", TokenValue:"+"},
                        Args: {
                            &ast.IdentStatement{
                                Value: &token.Token{TokenType:"IDENT", TokenValue:"one"},
                            },
                            &ast.IdentStatement{
                                Value: &token.Token{TokenType:"IDENT", TokenValue:"two"},
                            },
                        },
                    },
                },
            },
        },
        &ast.AssignmentStatement{
            Name:  &token.Token{TokenType:"IDENT", TokenValue:"threeAndFour"},
            Value: &ast.LambdaStatement{
                Args: {
                },
                Body: {
                    &ast.AssignmentStatement{
                        Name:  &token.Token{TokenType:"IDENT", TokenValue:"three"},
                        Value: &ast.IntStatement{Value:3},
                    },
                    &ast.AssignmentStatement{
                        Name:  &token.Token{TokenType:"IDENT", TokenValue:"four"},
                        Value: &ast.IntStatement{Value:4},
                    },
                    &ast.CallStatement{
                        Op:   &token.Token{TokenType:"PLUS", TokenValue:"+"},
                        Args: {
                            &ast.IdentStatement{
                                Value: &token.Token{TokenType:"IDENT", TokenValue:"three"},
                            },
                            &ast.IdentStatement{
                                Value: &token.Token{TokenType:"IDENT", TokenValue:"four"},
                            },
                        },
                    },
                },
            },
        },
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"PLUS", TokenValue:"+"},
            Args: {
                &ast.CallStatement{
                    Op:   &token.Token{TokenType:"IDENT", TokenValue:"oneAndTwo"},
                    Args: nil,
                },
                &ast.CallStatement{
                    Op:   &token.Token{TokenType:"IDENT", TokenValue:"threeAndFour"},
                    Args: nil,
                },
            },
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/___________(let_globalSeed_50)___________(let_minusOne_(lambda_()_(let_num_1)_(-_globalSeed_num)))___________(let_minusTwo_(lambda_()_(let_num_2)_(-_globalSeed_num)))___________(+_(minusOne)_(minusTwo))___________ - 1]
&ast.Program{
    Statements: {
        &ast.AssignmentStatement{
            Name:  &token.Token{TokenType:"IDENT", TokenValue:"globalSeed"},
            Value: &ast.IntStatement{Value:50},
        },
        &ast.AssignmentStatement{
            Name:  &token.Token{TokenType:"IDENT", TokenValue:"minusOne"},
            Value: &ast.LambdaStatement{
                Args: {
                },
                Body: {
                    &ast.AssignmentStatement{
                        Name:  &token.Token{TokenType:"IDENT", TokenValue:"num"},
                        Value: &ast.IntStatement{Value:1},
                    },
                    &ast.CallStatement{
                        Op:   &token.Token{TokenType:"MINUS", TokenValue:"-"},
                        Args: {
                            &ast.IdentStatement{
                                Value: &token.Token{TokenType:"IDENT", TokenValue:"globalSeed"},
                            },
                            &ast.IdentStatement{
                                Value: &token.Token{TokenType:"IDENT", TokenValue:"num"},
                            },
                        },
                    },
                },
            },
        },
        &ast.AssignmentStatement{
            Name:  &token.Token{TokenType:"IDENT", TokenValue:"minusTwo"},
            Value: &ast.LambdaStatement{
                Args: {
                },
                Body: {
                    &ast.AssignmentStatement{
                        Name:  &token.Token{TokenType:"IDENT", TokenValue:"num"},
                        Value: &ast.IntStatement{Value:2},
                    },
                    &ast.CallStatement{
                        Op:   &token.Token{TokenType:"MINUS", TokenValue:"-"},
                        Args: {
                            &ast.IdentStatement{
                                Value: &token.Token{TokenType:"IDENT", TokenValue:"globalSeed"},
                            },
                            &ast.IdentStatement{
                                Value: &token.Token{TokenType:"IDENT", TokenValue:"num"},
                            },
                        },
                    },
                },
            },
        },
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"PLUS", TokenValue:"+"},
            Args: {
                &ast.CallStatement{
                    Op:   &token.Token{TokenType:"IDENT", TokenValue:"minusOne"},
                    Args: nil,
                },
                &ast.CallStatement{
                    Op:   &token.Token{TokenType:"IDENT", TokenValue:"minusTwo"},
                    Args: nil,
                },
            },
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/___________(let_firstFoobar_(lambda_()_(let_foobar_50)_foobar))___________(let_secondFoobar_(lambda_()_(let_foobar_100)_foobar))___________(+_(firstFoobar)_(secondFoobar)) - 1]
&ast.Program{
    Statements: {
        &ast.AssignmentStatement{
            Name:  &token.Token{TokenType:"IDENT", TokenValue:"firstFoobar"},
            Value: &ast.LambdaStatement{
                Args: {
                },
                Body: {
                    &ast.AssignmentStatement{
                        Name:  &token.Token{TokenType:"IDENT", TokenValue:"foobar"},
                        Value: &ast.IntStatement{Value:50},
                    },
                    &ast.IdentStatement{
                        Value: &token.Token{TokenType:"IDENT", TokenValue:"foobar"},
                    },
                },
            },
        },
        &ast.AssignmentStatement{
            Name:  &token.Token{TokenType:"IDENT", TokenValue:"secondFoobar"},
            Value: &ast.LambdaStatement{
                Args: {
                },
                Body: {
                    &ast.AssignmentStatement{
                        Name:  &token.Token{TokenType:"IDENT", TokenValue:"foobar"},
                        Value: &ast.IntStatement{Value:100},
                    },
                    &ast.IdentStatement{
                        Value: &token.Token{TokenType:"IDENT", TokenValue:"foobar"},
                    },
                },
            },
        },
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"PLUS", TokenValue:"+"},
            Args: {
                &ast.CallStatement{
                    Op:   &token.Token{TokenType:"IDENT", TokenValue:"firstFoobar"},
                    Args: nil,
                },
                &ast.CallStatement{
                    Op:   &token.Token{TokenType:"IDENT", TokenValue:"secondFoobar"},
                    Args: nil,
                },
            },
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/___________(let_identity_(lambda_(a)_a))___________(identity_4)___________ - 1]
&ast.Program{
    Statements: {
        &ast.AssignmentStatement{
            Name:  &token.Token{TokenType:"IDENT", TokenValue:"identity"},
            Value: &ast.LambdaStatement{
                Args: {
                    &ast.IdentStatement{
                        Value: &token.Token{TokenType:"IDENT", TokenValue:"a"},
                    },
                },
                Body: {
                    &ast.IdentStatement{
                        Value: &token.Token{TokenType:"IDENT", TokenValue:"a"},
                    },
                },
            },
        },
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"IDENT", TokenValue:"identity"},
            Args: {
                &ast.IntStatement{Value:4},
            },
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/___________(let_sum_(lambda_(a_b)_(+_a_b)))___________(sum_2_5)___________ - 1]
&ast.Program{
    Statements: {
        &ast.AssignmentStatement{
            Name:  &token.Token{TokenType:"IDENT", TokenValue:"sum"},
            Value: &ast.LambdaStatement{
                Args: {
                    &ast.IdentStatement{
                        Value: &token.Token{TokenType:"IDENT", TokenValue:"a"},
                    },
                    &ast.IdentStatement{
                        Value: &token.Token{TokenType:"IDENT", TokenValue:"b"},
                    },
                },
                Body: {
                    &ast.CallStatement{
                        Op:   &token.Token{TokenType:"PLUS", TokenValue:"+"},
                        Args: {
                            &ast.IdentStatement{
                                Value: &token.Token{TokenType:"IDENT", TokenValue:"a"},
                            },
                            &ast.IdentStatement{
                                Value: &token.Token{TokenType:"IDENT", TokenValue:"b"},
                            },
                        },
                    },
                },
            },
        },
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"IDENT", TokenValue:"sum"},
            Args: {
                &ast.IntStatement{Value:2},
                &ast.IntStatement{Value:5},
            },
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/___________(fn_sum_(a_b)_(let_c_(+_a_b))_c)____________(sum_1_2)___________ - 1]
&ast.Program{
    Statements: {
        &ast.FunctionStatement{
            Name: &token.Token{TokenType:"IDENT", TokenValue:"sum"},
            Args: {
                &ast.IdentStatement{
                    Value: &token.Token{TokenType:"IDENT", TokenValue:"a"},
                },
                &ast.IdentStatement{
                    Value: &token.Token{TokenType:"IDENT", TokenValue:"b"},
                },
            },
            Body: {
                &ast.AssignmentStatement{
                    Name:  &token.Token{TokenType:"IDENT", TokenValue:"c"},
                    Value: &ast.CallStatement{
                        Op:   &token.Token{TokenType:"PLUS", TokenValue:"+"},
                        Args: {
                            &ast.IdentStatement{
                                Value: &token.Token{TokenType:"IDENT", TokenValue:"a"},
                            },
                            &ast.IdentStatement{
                                Value: &token.Token{TokenType:"IDENT", TokenValue:"b"},
                            },
                        },
                    },
                },
                &ast.IdentStatement{
                    Value: &token.Token{TokenType:"IDENT", TokenValue:"c"},
                },
            },
        },
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"IDENT", TokenValue:"sum"},
            Args: {
                &ast.IntStatement{Value:1},
                &ast.IntStatement{Value:2},
            },
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/___________(fn_sum_(a_b)_(let_c_(+_a_b))_c)____________(+_(sum_1_2)_(sum_3_4))___________ - 1]
&ast.Program{
    Statements: {
        &ast.FunctionStatement{
            Name: &token.Token{TokenType:"IDENT", TokenValue:"sum"},
            Args: {
                &ast.IdentStatement{
                    Value: &token.Token{TokenType:"IDENT", TokenValue:"a"},
                },
                &ast.IdentStatement{
                    Value: &token.Token{TokenType:"IDENT", TokenValue:"b"},
                },
            },
            Body: {
                &ast.AssignmentStatement{
                    Name:  &token.Token{TokenType:"IDENT", TokenValue:"c"},
                    Value: &ast.CallStatement{
                        Op:   &token.Token{TokenType:"PLUS", TokenValue:"+"},
                        Args: {
                            &ast.IdentStatement{
                                Value: &token.Token{TokenType:"IDENT", TokenValue:"a"},
                            },
                            &ast.IdentStatement{
                                Value: &token.Token{TokenType:"IDENT", TokenValue:"b"},
                            },
                        },
                    },
                },
                &ast.IdentStatement{
                    Value: &token.Token{TokenType:"IDENT", TokenValue:"c"},
                },
            },
        },
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"PLUS", TokenValue:"+"},
            Args: {
                &ast.CallStatement{
                    Op:   &token.Token{TokenType:"IDENT", TokenValue:"sum"},
                    Args: {
                        &ast.IntStatement{Value:1},
                        &ast.IntStatement{Value:2},
                    },
                },
                &ast.CallStatement{
                    Op:   &token.Token{TokenType:"IDENT", TokenValue:"sum"},
                    Args: {
                        &ast.IntStatement{Value:3},
                        &ast.IntStatement{Value:4},
                    },
                },
            },
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/___________(fn_sum_(a_b)_(let_c_(+_a_b))_c)____________(fn_outer_()_(+_(sum_1_2)_(sum_3_4)))___________ - 1]
&ast.Program{
    Statements: {
        &ast.FunctionStatement{
            Name: &token.Token{TokenType:"IDENT", TokenValue:"sum"},
            Args: {
                &ast.IdentStatement{
                    Value: &token.Token{TokenType:"IDENT", TokenValue:"a"},
                },
                &ast.IdentStatement{
                    Value: &token.Token{TokenType:"IDENT", TokenValue:"b"},
                },
            },
            Body: {
                &ast.AssignmentStatement{
                    Name:  &token.Token{TokenType:"IDENT", TokenValue:"c"},
                    Value: &ast.CallStatement{
                        Op:   &token.Token{TokenType:"PLUS", TokenValue:"+"},
                        Args: {
                            &ast.IdentStatement{
                                Value: &token.Token{TokenType:"IDENT", TokenValue:"a"},
                            },
                            &ast.IdentStatement{
                                Value: &token.Token{TokenType:"IDENT", TokenValue:"b"},
                            },
                        },
                    },
                },
                &ast.IdentStatement{
                    Value: &token.Token{TokenType:"IDENT", TokenValue:"c"},
                },
            },
        },
        &ast.FunctionStatement{
            Name: &token.Token{TokenType:"IDENT", TokenValue:"outer"},
            Args: {
            },
            Body: {
                &ast.CallStatement{
                    Op:   &token.Token{TokenType:"PLUS", TokenValue:"+"},
                    Args: {
                        &ast.CallStatement{
                            Op:   &token.Token{TokenType:"IDENT", TokenValue:"sum"},
                            Args: {
                                &ast.IntStatement{Value:1},
                                &ast.IntStatement{Value:2},
                            },
                        },
                        &ast.CallStatement{
                            Op:   &token.Token{TokenType:"IDENT", TokenValue:"sum"},
                            Args: {
                                &ast.IntStatement{Value:3},
                                &ast.IntStatement{Value:4},
                            },
                        },
                    },
                },
            },
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/___________(fn_sum_(a_b)_(let_c_(+_a_b))_c)____________(fn_outer_()_(+_(sum_1_2)_(sum_3_4)))___________(outer)___________ - 1]
&ast.Program{
    Statements: {
        &ast.FunctionStatement{
            Name: &token.Token{TokenType:"IDENT", TokenValue:"sum"},
            Args: {
                &ast.IdentStatement{
                    Value: &token.Token{TokenType:"IDENT", TokenValue:"a"},
                },
                &ast.IdentStatement{
                    Value: &token.Token{TokenType:"IDENT", TokenValue:"b"},
                },
            },
            Body: {
                &ast.AssignmentStatement{
                    Name:  &token.Token{TokenType:"IDENT", TokenValue:"c"},
                    Value: &ast.CallStatement{
                        Op:   &token.Token{TokenType:"PLUS", TokenValue:"+"},
                        Args: {
                            &ast.IdentStatement{
                                Value: &token.Token{TokenType:"IDENT", TokenValue:"a"},
                            },
                            &ast.IdentStatement{
                                Value: &token.Token{TokenType:"IDENT", TokenValue:"b"},
                            },
                        },
                    },
                },
                &ast.IdentStatement{
                    Value: &token.Token{TokenType:"IDENT", TokenValue:"c"},
                },
            },
        },
        &ast.FunctionStatement{
            Name: &token.Token{TokenType:"IDENT", TokenValue:"outer"},
            Args: {
            },
            Body: {
                &ast.CallStatement{
                    Op:   &token.Token{TokenType:"PLUS", TokenValue:"+"},
                    Args: {
                        &ast.CallStatement{
                            Op:   &token.Token{TokenType:"IDENT", TokenValue:"sum"},
                            Args: {
                                &ast.IntStatement{Value:1},
                                &ast.IntStatement{Value:2},
                            },
                        },
                        &ast.CallStatement{
                            Op:   &token.Token{TokenType:"IDENT", TokenValue:"sum"},
                            Args: {
                                &ast.IntStatement{Value:3},
                                &ast.IntStatement{Value:4},
                            },
                        },
                    },
                },
            },
        },
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"IDENT", TokenValue:"outer"},
            Args: nil,
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/___________(fn_sum_(a_b)_(let_c_(+_a_b))_c)____________(fn_outer_()_(+_(sum_1_2)_(sum_3_4)))____________(outer)___________ - 1]
&ast.Program{
    Statements: {
        &ast.FunctionStatement{
            Name: &token.Token{TokenType:"IDENT", TokenValue:"sum"},
            Args: {
                &ast.IdentStatement{
                    Value: &token.Token{TokenType:"IDENT", TokenValue:"a"},
                },
                &ast.IdentStatement{
                    Value: &token.Token{TokenType:"IDENT", TokenValue:"b"},
                },
            },
            Body: {
                &ast.AssignmentStatement{
                    Name:  &token.Token{TokenType:"IDENT", TokenValue:"c"},
                    Value: &ast.CallStatement{
                        Op:   &token.Token{TokenType:"PLUS", TokenValue:"+"},
                        Args: {
                            &ast.IdentStatement{
                                Value: &token.Token{TokenType:"IDENT", TokenValue:"a"},
                            },
                            &ast.IdentStatement{
                                Value: &token.Token{TokenType:"IDENT", TokenValue:"b"},
                            },
                        },
                    },
                },
                &ast.IdentStatement{
                    Value: &token.Token{TokenType:"IDENT", TokenValue:"c"},
                },
            },
        },
        &ast.FunctionStatement{
            Name: &token.Token{TokenType:"IDENT", TokenValue:"outer"},
            Args: {
            },
            Body: {
                &ast.CallStatement{
                    Op:   &token.Token{TokenType:"PLUS", TokenValue:"+"},
                    Args: {
                        &ast.CallStatement{
                            Op:   &token.Token{TokenType:"IDENT", TokenValue:"sum"},
                            Args: {
                                &ast.IntStatement{Value:1},
                                &ast.IntStatement{Value:2},
                            },
                        },
                        &ast.CallStatement{
                            Op:   &token.Token{TokenType:"IDENT", TokenValue:"sum"},
                            Args: {
                                &ast.IntStatement{Value:3},
                                &ast.IntStatement{Value:4},
                            },
                        },
                    },
                },
            },
        },
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"IDENT", TokenValue:"outer"},
            Args: nil,
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/___________(let_globalNum_10)____________(fn_sum_(a_b)______________(let_c_(+_a_b))_____________(+_c_globalNum))____________(fn_outer_()_____________(+_(sum_1_2)_(sum_3_4)_globalNum))____________(+_outer_globalNum)___________ - 1]
&ast.Program{
    Statements: {
        &ast.AssignmentStatement{
            Name:  &token.Token{TokenType:"IDENT", TokenValue:"globalNum"},
            Value: &ast.IntStatement{Value:10},
        },
        &ast.FunctionStatement{
            Name: &token.Token{TokenType:"IDENT", TokenValue:"sum"},
            Args: {
                &ast.IdentStatement{
                    Value: &token.Token{TokenType:"IDENT", TokenValue:"a"},
                },
                &ast.IdentStatement{
                    Value: &token.Token{TokenType:"IDENT", TokenValue:"b"},
                },
            },
            Body: {
                &ast.AssignmentStatement{
                    Name:  &token.Token{TokenType:"IDENT", TokenValue:"c"},
                    Value: &ast.CallStatement{
                        Op:   &token.Token{TokenType:"PLUS", TokenValue:"+"},
                        Args: {
                            &ast.IdentStatement{
                                Value: &token.Token{TokenType:"IDENT", TokenValue:"a"},
                            },
                            &ast.IdentStatement{
                                Value: &token.Token{TokenType:"IDENT", TokenValue:"b"},
                            },
                        },
                    },
                },
                &ast.CallStatement{
                    Op:   &token.Token{TokenType:"PLUS", TokenValue:"+"},
                    Args: {
                        &ast.IdentStatement{
                            Value: &token.Token{TokenType:"IDENT", TokenValue:"c"},
                        },
                        &ast.IdentStatement{
                            Value: &token.Token{TokenType:"IDENT", TokenValue:"globalNum"},
                        },
                    },
                },
            },
        },
        &ast.FunctionStatement{
            Name: &token.Token{TokenType:"IDENT", TokenValue:"outer"},
            Args: {
            },
            Body: {
                &ast.CallStatement{
                    Op:   &token.Token{TokenType:"PLUS", TokenValue:"+"},
                    Args: {
                        &ast.CallStatement{
                            Op:   &token.Token{TokenType:"IDENT", TokenValue:"sum"},
                            Args: {
                                &ast.IntStatement{Value:1},
                                &ast.IntStatement{Value:2},
                            },
                        },
                        &ast.CallStatement{
                            Op:   &token.Token{TokenType:"IDENT", TokenValue:"sum"},
                            Args: {
                                &ast.IntStatement{Value:3},
                                &ast.IntStatement{Value:4},
                            },
                        },
                        &ast.IdentStatement{
                            Value: &token.Token{TokenType:"IDENT", TokenValue:"globalNum"},
                        },
                    },
                },
            },
        },
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"PLUS", TokenValue:"+"},
            Args: {
                &ast.IdentStatement{
                    Value: &token.Token{TokenType:"IDENT", TokenValue:"outer"},
                },
                &ast.IdentStatement{
                    Value: &token.Token{TokenType:"IDENT", TokenValue:"globalNum"},
                },
            },
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/___________(let_globalNum_10)____________(fn_sum_(a_b)______________(let_c_(+_a_b))_____________(+_c_globalNum))____________(fn_outer_()_____________(+_(sum_1_2)_(sum_3_4)_globalNum))____________(+_(outer)_globalNum)___________ - 1]
&ast.Program{
    Statements: {
        &ast.AssignmentStatement{
            Name:  &token.Token{TokenType:"IDENT", TokenValue:"globalNum"},
            Value: &ast.IntStatement{Value:10},
        },
        &ast.FunctionStatement{
            Name: &token.Token{TokenType:"IDENT", TokenValue:"sum"},
            Args: {
                &ast.IdentStatement{
                    Value: &token.Token{TokenType:"IDENT", TokenValue:"a"},
                },
                &ast.IdentStatement{
                    Value: &token.Token{TokenType:"IDENT", TokenValue:"b"},
                },
            },
            Body: {
                &ast.AssignmentStatement{
                    Name:  &token.Token{TokenType:"IDENT", TokenValue:"c"},
                    Value: &ast.CallStatement{
                        Op:   &token.Token{TokenType:"PLUS", TokenValue:"+"},
                        Args: {
                            &ast.IdentStatement{
                                Value: &token.Token{TokenType:"IDENT", TokenValue:"a"},
                            },
                            &ast.IdentStatement{
                                Value: &token.Token{TokenType:"IDENT", TokenValue:"b"},
                            },
                        },
                    },
                },
                &ast.CallStatement{
                    Op:   &token.Token{TokenType:"PLUS", TokenValue:"+"},
                    Args: {
                        &ast.IdentStatement{
                            Value: &token.Token{TokenType:"IDENT", TokenValue:"c"},
                        },
                        &ast.IdentStatement{
                            Value: &token.Token{TokenType:"IDENT", TokenValue:"globalNum"},
                        },
                    },
                },
            },
        },
        &ast.FunctionStatement{
            Name: &token.Token{TokenType:"IDENT", TokenValue:"outer"},
            Args: {
            },
            Body: {
                &ast.CallStatement{
                    Op:   &token.Token{TokenType:"PLUS", TokenValue:"+"},
                    Args: {
                        &ast.CallStatement{
                            Op:   &token.Token{TokenType:"IDENT", TokenValue:"sum"},
                            Args: {
                                &ast.IntStatement{Value:1},
                                &ast.IntStatement{Value:2},
                            },
                        },
                        &ast.CallStatement{
                            Op:   &token.Token{TokenType:"IDENT", TokenValue:"sum"},
                            Args: {
                                &ast.IntStatement{Value:3},
                                &ast.IntStatement{Value:4},
                            },
                        },
                        &ast.IdentStatement{
                            Value: &token.Token{TokenType:"IDENT", TokenValue:"globalNum"},
                        },
                    },
                },
            },
        },
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"PLUS", TokenValue:"+"},
            Args: {
                &ast.CallStatement{
                    Op:   &token.Token{TokenType:"IDENT", TokenValue:"outer"},
                    Args: nil,
                },
                &ast.IdentStatement{
                    Value: &token.Token{TokenType:"IDENT", TokenValue:"globalNum"},
                },
            },
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/(len_"something") - 1]
&ast.Program{
    Statements: {
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"IDENT", TokenValue:"len"},
            Args: {
                &ast.StringStatement{Value:"something"},
            },
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/(assert_3_3_"3_is_equal_to_3") - 1]
&ast.Program{
    Statements: {
        &ast.AssertStatement{
            Left:    &ast.IntStatement{Value:3},
            Right:   &ast.IntStatement{Value:3},
            Message: &token.Token{TokenType:"STRING", TokenValue:"3 is equal to 3"},
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/(assert_3_3_"3_is_equal_to_3")_3 - 1]
&ast.Program{
    Statements: {
        &ast.AssertStatement{
            Left:    &ast.IntStatement{Value:3},
            Right:   &ast.IntStatement{Value:3},
            Message: &token.Token{TokenType:"STRING", TokenValue:"3 is equal to 3"},
        },
        &ast.IntStatement{Value:3},
        &ast.EmptyStatement{},
    },
}
---

[TestVM/{1_2_3_4}_(pop_a) - 1]
&ast.Program{
    Statements: {
        &ast.TableStatement{
            Elements: {
                &ast.IntStatement{Value:1},
                &ast.IntStatement{Value:2},
                &ast.IntStatement{Value:3},
                &ast.IntStatement{Value:4},
            },
        },
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"IDENT", TokenValue:"pop"},
            Args: {
                &ast.IdentStatement{
                    Value: &token.Token{TokenType:"IDENT", TokenValue:"a"},
                },
            },
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/(pop_{1_2_3_4}) - 1]
&ast.Program{
    Statements: {
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"IDENT", TokenValue:"pop"},
            Args: {
                &ast.TableStatement{
                    Elements: {
                        &ast.IntStatement{Value:1},
                        &ast.IntStatement{Value:2},
                        &ast.IntStatement{Value:3},
                        &ast.IntStatement{Value:4},
                    },
                },
            },
        },
        &ast.EmptyStatement{},
    },
}
---

[TestVM/(let_a_{1_2_3_4})_(pop_a) - 1]
&ast.Program{
    Statements: {
        &ast.AssignmentStatement{
            Name:  &token.Token{TokenType:"IDENT", TokenValue:"a"},
            Value: &ast.TableStatement{
                Elements: {
                    &ast.IntStatement{Value:1},
                    &ast.IntStatement{Value:2},
                    &ast.IntStatement{Value:3},
                    &ast.IntStatement{Value:4},
                },
            },
        },
        &ast.CallStatement{
            Op:   &token.Token{TokenType:"IDENT", TokenValue:"pop"},
            Args: {
                &ast.IdentStatement{
                    Value: &token.Token{TokenType:"IDENT", TokenValue:"a"},
                },
            },
        },
        &ast.EmptyStatement{},
    },
}
---
